[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/runner/RunnerRoom.gd" type="Script" id=1]
[ext_resource path="res://src/runner/gravity/GravityTiles.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/runner/RoomBox.tscn" type="PackedScene" id=3]

[node name="GravityGap" type="Node2D"]
script = ExtResource( 1 )

[node name="GravityTiles" parent="." instance=ExtResource( 2 )]
tile_data = PackedInt32Array( 0, 0, 196609, 1, 0, 196610, 2, 0, 196610, 3, 0, 196610, 4, 0, 196610, 5, 0, 196610, 6, 0, 196610, 7, 0, 196610, 8, 0, 196610, 9, 0, 196610, 10, 0, 196610, 11, 0, 196610, 12, 0, 196610, 13, 0, 196610, 14, 0, 196610, 15, 0, 196611 )

[node name="RoomBox" parent="." instance=ExtResource( 3 )]
position = Vector2( 64, -64 )
